--- a/Makefile.linux
+++ b/Makefile.linux
@@ -4,6 +4,7 @@ LINUX_BUILDLOG		:= $(DIR_WORKING)/linux-build.log
 # v4.8-rc8
 LINUX_PATCHES_BASE	:= 08895a8b6b06ed2323cd97a36ee40a116b3db8ed
 LINUX_PATCHES_DIR	:= $(DIR_UNICORE32)/patches-linux
+
 LINUX_DEFCONFIG		:= unicore32_defconfig
 
 linux-new:
@@ -46,4 +47,14 @@ stable-new:
 	@git clone $(STABLE_LOCAL) -- $(STABLE_WORKING)
 	@cd $(STABLE_WORKING); git checkout -b unicore32 $(STABLE_VERSION)
 
+stable-make:
+	@echo "Make mrproper ..."
+	@make -C $(STABLE_WORKING) ARCH=$(LINUX_ARCH) mrproper		>> $(LINUX_BUILDLOG) 2>&1
+	@echo "Make $(LINUX_DEFCONFIG) ..."
+	@make -C $(STABLE_WORKING) ARCH=$(LINUX_ARCH) $(LINUX_DEFCONFIG) >> $(LINUX_BUILDLOG) 2>&1
+	@echo "Making (in several minutes) ..."
+	@make -C $(STABLE_WORKING) ARCH=$(LINUX_ARCH) -j4 >> $(LINUX_BUILDLOG) 2>&1
+	@echo "Softlinking necessary files ..."
+	@ln -sf $(STABLE_WORKING)/arch/unicore32/boot/zImage $(DIR_WORKING)
+	@ln -sf $(STABLE_WORKING)/System.map $(DIR_WORKING)
 
