--- a/Makefile.linux
+++ b/Makefile.linux
@@ -37,7 +37,7 @@ linux-make:
 STABLE_LOCAL		:= /pub/GIT-ORIGIN/linux/linux-stable.git
 STABLE_WORKING		:= $(DIR_WORKING)/linux-stable
 STABLE_VERSION		:= v4.9.150
-STABLE_PATCHES		:= $(DIR_UNICORE32)/patches-linux
+STABLE_PATCHES		:= $(DIR_UNICORE32)/patches-stable
 
 stable-new:
 	@echo "Remove old linux-stable repo ..."
