--- a/Makefile.qemu
+++ b/Makefile.qemu
@@ -21,23 +21,23 @@ qemu-0207-new:
 	@cd $(QEMU_0207_WORKING); git am $(QEMU_0207_PATCHES)/*
 
 qemu-make:
+	@echo "Remove old log file"
+	@rm -fr $(QEMU_BUILDLOG)
 	@echo "Configure qemu ..."
-	@cd $(QEMU_0207_WORKING); ./configure			\
-		--target-list=$(QEMU_TARGETS)			\
-		--enable-debug			 		\
-		--disable-sdl			 		\
-		--enable-curses					\
-		--extra-cflags="-D restrict=restricT"		\
-		--interp-prefix=$(DIR_GNU_UC)			\
-		--prefix=$(QEMU_0207_RUNNING)			\
+	@cd $(QEMU_0207_WORKING); ./configure				\
+		--target-list=$(QEMU_TARGETS)				\
+		--enable-debug			 			\
+		--disable-sdl			 			\
+		--enable-curses						\
+		--extra-cflags="-D restrict=restricT"			\
+		--interp-prefix=$(CROSS_UNICORE32)/unicore32-linux	\
+		--prefix=$(QEMU_0207_RUNNING)				\
 		>> $(QEMU_BUILDLOG) 2>&1
 	@echo "Make qemu and make install ..."
 	@make -C $(QEMU_0207_WORKING) -j4	>> $(QEMU_BUILDLOG) 2>&1
 	@make -C $(QEMU_0207_WORKING) install	>> $(QEMU_BUILDLOG) 2>&1
 
 qemu-run:
-	@test -d $(DIR_WORKING)/qemu-unicore32 ||		\
-		mkdir -p $(DIR_WORKING)/qemu-unicore32
 	@echo "Remove old log file"
 	@rm -fr $(QEMU_TRACELOG)
 	@echo "Running QEMU in this tty ..."
