--- a/Makefile.qemu
+++ b/Makefile.qemu
@@ -41,7 +41,7 @@ qemu-0207-run:
 	@echo "Remove old log file"
 	@rm -fr $(QEMU_TRACELOG)
 	@echo "Running QEMU in this tty ..."
-	@$(DIR_WORKING)/qemu-unicore32/bin/qemu-system-unicore32	\
+	@$(QEMU_0207_RUNNING)/bin/qemu-system-unicore32			\
 		-curses							\
 		-M puv3							\
 		-m 512							\
