--- a/Makefile.qemu
+++ b/Makefile.qemu
@@ -36,6 +36,9 @@ qemu-0207-make:
 	@echo "Make qemu and make install ..."
 	@make -C $(QEMU_0207_WORKING) -j4	>> $(QEMU_BUILDLOG) 2>&1
 	@make -C $(QEMU_0207_WORKING) install	>> $(QEMU_BUILDLOG) 2>&1
+	@echo "Softlinking necessary files ..."
+	@ln -sf $(QEMU_0207_RUNNING)/bin/qemu-unicore32 $(DIR_WORKING)
+	@ln -sf $(QEMU_0207_RUNNING)/bin/qemu-system-unicore32 $(DIR_WORKING)
 
 qemu-0207-run:
 	@echo "Remove old log file"
