--- a/Makefile.qemu
+++ b/Makefile.qemu
@@ -49,6 +49,7 @@ qemu-0207-run:
 		-M puv3							\
 		-m 512							\
 		-icount 0						\
+		-d cpu,in_asm,out_asm,int				\
 		-kernel $(DIR_WORKING)/zImage				\
 		-append "root=/dev/nfs nfsroot=192.168.200.161:/export/guestroot/,tcp rw ip=192.168.122.4"    \
 		2> $(QEMU_TRACELOG)
