Linux-0409: rename patches dir name
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -39,7 +39,7 @@ linux-make:
 STABLE_LOCAL		:= /pub/GIT-ORIGIN/linux/linux-stable.git
 STABLE_WORKING		:= $(DIR_WORKING)/linux-stable
 STABLE_VERSION		:= v4.9.150
-STABLE_PATCHES		:= $(DIR_UNICORE32)/patches-stable
+STABLE_PATCHES		:= $(DIR_UNICORE32)/patches-linux-0409
 
 stable-new:
 	@echo "Remove old linux-stable repo ..."
