--- a/Makefile.linux
+++ b/Makefile.linux
@@ -1,6 +1,6 @@
 LINUX_ARCH		:= unicore32
 LINUX_BUILDLOG		:= $(DIR_WORKING)/buildlog-linux
-LINUX_DEFCONFIG		:= qemu_defconfig
+LINUX_DEFCONFIG		:= unicore32_defconfig
 
 LINUX_0409_LOCAL		:= /pub/GIT-ORIGIN/linux/linux-stable.git
 LINUX_0409_WORKING		:= $(DIR_WORKING)/linux-0409
@@ -16,6 +16,19 @@ linux-0409-new:
 	@cd $(LINUX_0409_WORKING); git checkout -b unicore32 $(LINUX_0409_VERSION)
 	@cd $(LINUX_0409_WORKING); git am $(LINUX_0409_PATCHES)/*.patch
 
+linux-0409-make-def:
+	@echo "Remove old log file"
+	@rm -fr $(LINUX_BUILDLOG)
+	@echo "Make mrproper ..."
+	@make -C $(LINUX_0409_WORKING) ARCH=$(LINUX_ARCH) mrproper		>> $(LINUX_BUILDLOG) 2>&1
+	@echo "Make $(LINUX_DEFCONFIG) ..."
+	@make -C $(LINUX_0409_WORKING) ARCH=$(LINUX_ARCH) $(LINUX_DEFCONFIG)	>> $(LINUX_BUILDLOG) 2>&1
+	@echo "Making (in several minutes) ..."
+	@make -C $(LINUX_0409_WORKING) ARCH=$(LINUX_ARCH) -j4			>> $(LINUX_BUILDLOG) 2>&1
+	@echo "Softlinking necessary files ..."
+	@ln -sf $(LINUX_0409_WORKING)/arch/unicore32/boot/zImage $(DIR_WORKING)
+	@ln -sf $(LINUX_0409_WORKING)/System.map $(DIR_WORKING)
+
 linux-0409-make-qemu:
 	@echo "Remove old log file"
 	@rm -fr $(LINUX_BUILDLOG)
@@ -25,7 +38,7 @@ linux-0409-make-qemu:
 	@rm -fr $(LINUX_0409_WORKING)/usr/initramfs_list
 	@cp -a $(DIR_WORKING)/initramfs_list $(LINUX_0409_WORKING)/usr/
 	@echo "Make $(LINUX_DEFCONFIG) ..."
-	@make -C $(LINUX_0409_WORKING) ARCH=$(LINUX_ARCH) $(LINUX_DEFCONFIG)	>> $(LINUX_BUILDLOG) 2>&1
+	@make -C $(LINUX_0409_WORKING) ARCH=$(LINUX_ARCH) qemu_defconfig	>> $(LINUX_BUILDLOG) 2>&1
 	@echo "Making (in several minutes) ..."
 	@make -C $(LINUX_0409_WORKING) ARCH=$(LINUX_ARCH) -j4			>> $(LINUX_BUILDLOG) 2>&1
 	@echo "Softlinking necessary files ..."
