Makefile.qemu: comment append option in qemu-0207-run
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/Makefile.qemu
+++ b/Makefile.qemu
@@ -49,9 +49,9 @@ qemu-0207-run:
 		-m 512							\
 		-icount 0						\
 		-kernel $(DIR_WORKING)/zImage				\
-		-append "root=/dev/nfs nfsroot=192.168.200.161:/export/guestroot/,tcp rw ip=192.168.122.4"    \
 		-D $(QEMU_DEBUGLOG)
 
+#		-append "root=/dev/nfs nfsroot=192.168.200.161:/export/guestroot/,tcp rw ip=192.168.122.4"    \
 #		-d cpu,out_asm,int,op,mmu				\
 #		-net nic						\
 #		-net tap,ifname=tap_$(USER),script=no,downscript=no	\
