Makefile.qemu: change QEMU_0207_RUNNING to __qemu-0207
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/Makefile.qemu
+++ b/Makefile.qemu
@@ -6,7 +6,7 @@ QEMU_DEBUGLOG	:= $(DIR_WORKING)/debuglog-qemu
 QEMU_0207_WORKING	:= $(DIR_WORKING)/qemu-0207
 QEMU_0207_VERSION	:= origin/stable-2.7
 QEMU_0207_PATCHES	:= $(DIR_UNICORE32)/patches-qemu-0207
-QEMU_0207_RUNNING	:= $(DIR_WORKING)/qemu-0207-uc32
+QEMU_0207_RUNNING	:= $(DIR_WORKING)/__qemu-0207
 
 QEMU_PIXMAN_LOCAL	:= /pub/GIT-ORIGIN/qemu/pixman.git
 
